--- a/home/TestMain.html
+++ b/home/TestMain.html
@@ -967,7 +967,7 @@
         #facebook-mockup-preview{transform: scale(0.9);}
         #facebook-mockup-preview .preview-header{padding:18px 14px 6px 14px}
         #facebook-mockup-preview .preview-header .profile-picture-wrapper{height:43px;width:43px;border:none}
-        #facebook-mockup-preview .preview-header .user-name-wrapper .user-name{font-weight:600;font-size:16px;line-height:22px;color:#050505;margin-bottom:0}
+        #facebook-mockup-preview .preview-header .user-name-wrapper .user-name{font-weight:600;font-size:16px;line-height:22px;color:#050505;margin-bottom:0;white-space: nowrap;}
         #facebook-mockup-preview .preview-header .user-name-wrapper .facebook-sponcered-text{font-weight:400;font-size:13px;color:#606770;line-height:18px}
         .ib__mockup-dropzone{margin-top:19px !important}
         #linkedin-mockup-preview{font-family:"Segoe UI",sans-serif;transform: scale(0.915);}
