--- a/home/TestMain.html
+++ b/home/TestMain.html
@@ -7609,13 +7609,13 @@ document.addEventListener('DOMContentLoaded', function () {
 
     // Set the file names based on the reaction type
     const reactionMap = {
-        "Facebook-anger": "facebook-anger.svg",
-        "Facebook-like": "facebook-like.svg",
-        "Facebook-heart": "facebook-heart.svg",
+        "Facebook-Anger":   "facebook-anger.svg",
+        "Facebook-like":    "facebook-like.svg",
+        "Facebook-heart":   "facebook-heart.svg",
         "Facebook-surprise": "facebook-surprise.svg",
-        "Facebook-sad": "facebook-sad.svg",
-        "Facebook-laugh": "facebook-laugh.svg",
-        "Facebook-hug": "facebook-hug.svg"
+        "Facebook-sad":     "facebook-sad.svg",
+        "Facebook-laugh":   "facebook-laugh.svg",
+        "Facebook-hug":     "facebook-hug.svg"
     };
 
     // Select the appropriate SVG file based on the reaction type
